# polyglot

./: AGENTS.md  README.md  app.py  audio.py  pyproject.toml  suppress_alsa.py  transcriber.py  translator.py
